--- a/css/styles.css
+++ b/css/styles.css
@@ -9846,6 +9846,14 @@ a.text-dark:hover, a.text-dark:focus {
   color: #6c757d !important;
 }
 
+.text-no-end{
+  margin-bottom: 1rem !important;
+}
+
+.text-color{
+  color: #fed136 !important;
+}
+
 .text-black-50 {
   color: rgba(0, 0, 0, 0.5) !important;
 }
@@ -9987,6 +9995,16 @@ p {
 
 .page-section {
   padding: 6rem 0;
+}
+
+.page-section-no-end{
+  margin: 0px;
+  padding: 20px 0px !important;
+}
+.mapa_completo{
+  width: 1900px;
+  height: 700px;
+  border: 0;
 }
 .page-section h2.section-heading {
   font-size: 2.5rem;
