--- a/css/styles.css
+++ b/css/styles.css
@@ -10498,6 +10498,7 @@ section#contact form#contactForm :-ms-input-placeholder {
     width: 60%;
     margin-top: 3rem;
     position: absolute;
+    background-color: #DCDCDC;
   }
   .intro .intro-text .intro-button {
     width: 100%;
