--- a/css/styles.css
+++ b/css/styles.css
@@ -47,6 +47,43 @@
   box-sizing: border-box;
 }
 
+/*CREADOS CONTACTO*/
+/*COLOR NEGRO #343a40*/
+.fa {
+  padding: 20px;
+  font-size: 30px;
+  width: 70px;
+  text-align: center;
+  text-decoration: none;
+  border-radius: 50%;
+}
+.fa-facebook {
+  background: #3B5998;
+  color: white;
+}
+.fa-instagram {
+  background: #3f729b;
+  color: white;
+}
+.fa-whatsapp {
+  background: #00bb2d;
+  color: white;
+}
+.text-muted-1{
+  color: #fec503;
+}
+iframe{
+  width: 100%;
+  height: 600px;
+  border:0;
+  margin: auto;
+}
+section#mapa_contenedor{
+  padding: 30px 0px 20px;
+}
+/*FIN*/
+
+
 html {
   font-family: sans-serif;
   line-height: 1.15;
