--- a/css/styles.css
+++ b/css/styles.css
@@ -82,6 +82,32 @@ section#mapa_contenedor{
   padding: 30px 0px 20px;
 }
 /*FIN*/
+/*CREADOS SOBRE NOSOTROS*/
+header.masthead-1 {
+  /*padding-top: 10.5rem;*/
+  padding-bottom: 4.4rem; /*6*/
+  text-align: center;
+  color: #fff;
+  background-image: url("../assets/img/intro.png");
+  background-repeat: no-repeat;
+  background-attachment: scroll;
+  background-position: center center;
+  background-size: cover;
+}
+
+@media (min-width: 768px) {
+  header.masthead-1 {
+    padding-bottom: 7rem;
+  }
+}
+#about{
+  padding: 30px 0px 20px;
+}
+
+#timeline-end{
+  color: #343a40;
+}
+/*FIN*/
 
 
 html {
