--- a/css/styles.css
+++ b/css/styles.css
@@ -93,7 +93,7 @@ header.masthead-1 {
   padding-bottom: 4.4rem; /*6*/
   text-align: center;
   color: #fff;
-  background-image: url("../assets/img/intro.png");
+  /*background-image: url("../assets/img/intro.png");*/
   background-repeat: no-repeat;
   background-attachment: scroll;
   background-position: center center;
@@ -10201,6 +10201,29 @@ img::-moz-selection {
     margin-right: 0;
   }
 }
+
+
+.formatot{
+
+  font-size: 2.5rem;
+  margin-top: 0;
+  margin-bottom: 1rem;
+
+}
+
+.subt{
+  font-size: 1rem;
+    font-weight: 400;
+    font-style: italic;
+    font-family: "Droid Serif", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+    margin-bottom: 4rem;
+    color: #6c757d !important;
+}
+
+
+
+
+
 header.masthead {
   padding-top: 10.5rem;
   padding-bottom: 6rem;
