--- a/css/styles.css
+++ b/css/styles.css
@@ -10220,6 +10220,57 @@ img::-moz-selection {
     color: #6c757d !important;
 }
 
+.lanimacion{
+
+  
+  display: flex;
+  width: 500px;
+  height: 80px;
+  font-size: 40px;
+  line-height: 40px;
+
+  
+  margin:auto;
+  overflow: hidden;
+
+}
+
+.lanimacion ul {
+list-style: none;
+padding-left: 10px;
+animation: cambiar 7s infinite;
+
+}
+
+.lanimacion ul,p {
+  margin:0; 
+  
+  }
+
+
+  @keyframes cambiar{
+    0%{ margin-top:0;}
+    20%{ margin-top:0;}
+
+    25%{ margin-top:-40px;}
+    50%{ margin-top:-40px;}
+
+
+    55%{ margin-top:-80px;}
+    80%{ margin-top:-80px;}
+
+
+    85%{ margin-top:-40px;}
+    95%{ margin-top:-40px;}
+
+    100%{ margin-top:0;}
+
+
+
+
+
+  }
+
 
 
 
