--- a/css/styles.css
+++ b/css/styles.css
@@ -59,6 +59,18 @@
   text-decoration: none;
   border-radius: 50%;
 }
+
+.fa1 {
+  padding: 15px;
+  font-size: 10px;
+  width: 40px;
+  height: 40px;
+  text-align: center;
+  text-decoration: none;
+  border-radius: 50%;
+}
+
+
 .fa-facebook {
   background: #3B5998;
   color: white;
