--- a/css/styles.css
+++ b/css/styles.css
@@ -260,7 +260,7 @@ a:not([href]):not([class]):hover {
   text-decoration: none;
 }
 
-/*pre,
+pre,
 code,
 kbd,
 samp {
@@ -273,7 +273,7 @@ pre {
   margin-bottom: 1rem;
   overflow: auto;
   -ms-overflow-style: scrollbar;
-}*/
+}
 
 figure {
   margin: 0 0 1rem;
@@ -283,7 +283,7 @@ img {
   vertical-align: middle;
   border-style: none;
 }
-/*
+
 svg {
   overflow: hidden;
   vertical-align: middle;
@@ -299,7 +299,7 @@ caption {
   color: #6c757d;
   text-align: left;
   caption-side: bottom;
-}*/
+}
 
 th {
   text-align: inherit;
@@ -381,7 +381,7 @@ textarea {
   overflow: auto;
   resize: vertical;
 }
-/*
+
 fieldset {
   min-width: 0;
   padding: 0;
@@ -403,7 +403,7 @@ legend {
 
 progress {
   vertical-align: baseline;
-}*/
+}
 
 [type=number]::-webkit-inner-spin-button,
 [type=number]::-webkit-outer-spin-button {
@@ -1537,7 +1537,7 @@ pre code {
     flex-grow: 1;
     max-width: 100%;
   }
-/*
+
   .row-cols-xl-1 > * {
     flex: 0 0 100%;
     max-width: 100%;
@@ -1567,14 +1567,14 @@ pre code {
     flex: 0 0 16.6666666667%;
     max-width: 16.6666666667%;
   }
-  */
+  
 
   .col-xl-auto {
     flex: 0 0 auto;
     width: auto;
     max-width: 100%;
   }
-/*
+
   .col-xl-1 {
     flex: 0 0 8.3333333333%;
     max-width: 8.3333333333%;
@@ -1634,16 +1634,16 @@ pre code {
     flex: 0 0 100%;
     max-width: 100%;
   }
-  */
-/*
+  
+
   .order-xl-first {
     order: -1;
   }
 
   .order-xl-last {
     order: 13;
-  }*/
-/*
+  }
+
   .order-xl-0 {
     order: 0;
   }
@@ -1695,7 +1695,7 @@ pre code {
   .order-xl-12 {
     order: 12;
   }
-/*
+
   .offset-xl-0 {
     margin-left: 0;
   }
@@ -1745,7 +1745,7 @@ pre code {
   }
   */
 }
-/*
+
 .table {
   width: 100%;
   margin-bottom: 1rem;
@@ -2057,7 +2057,6 @@ pre code {
   border: 0;
 }
 
-*/
 
 .form-control {
   display: block;
@@ -2131,7 +2130,7 @@ select.form-control:focus::-ms-value {
   width: 100%;
 }
 
-/*
+
 .col-form-label {
   padding-top: calc(0.375rem + 1px);
   padding-bottom: calc(0.375rem + 1px);
@@ -2153,8 +2152,7 @@ select.form-control:focus::-ms-value {
   font-size: 0.875rem;
   line-height: 1.5;
 }
-*/
-/*
+
 .form-control-plaintext {
   display: block;
   width: 100%;
@@ -2171,8 +2169,7 @@ select.form-control:focus::-ms-value {
   padding-right: 0;
   padding-left: 0;
 }
-*/
-/*
+
 .form-control-sm {
   height: calc(1.5em + 0.5rem + 2px);
   padding: 0.25rem 0.5rem;
@@ -2180,8 +2177,7 @@ select.form-control:focus::-ms-value {
   line-height: 1.5;
   border-radius: 0.2rem;
 }
-*/
-/*
+
 .form-control-lg {
   height: calc(1.5em + 1rem + 2px);
   padding: 0.5rem 1rem;
@@ -2189,7 +2185,7 @@ select.form-control:focus::-ms-value {
   line-height: 1.5;
   border-radius: 0.3rem;
 }
-*/
+
 select.form-control[size], select.form-control[multiple] {
   height: auto;
 }
@@ -2201,7 +2197,7 @@ textarea.form-control {
 .form-group {
   margin-bottom: 1rem;
 }
-/*
+
 .form-text {
   display: block;
   margin-top: 0.25rem;
@@ -2218,8 +2214,7 @@ textarea.form-control {
   padding-right: 5px;
   padding-left: 5px;
 }
-*/
-/*
+
 .form-check {
   position: relative;
   display: block;
@@ -2259,8 +2254,7 @@ textarea.form-control {
   font-size: 80%;
   color: #28a745;
 }
-*/
-/*
+
 .valid-tooltip {
   position: absolute;
   top: 100%;
@@ -2276,9 +2270,7 @@ textarea.form-control {
   background-color: rgba(40, 167, 69, 0.9);
   border-radius: 0.25rem;
 }
-*/
 
-/*
 .was-validated :valid ~ .valid-feedback,
 .was-validated :valid ~ .valid-tooltip,
 .is-valid ~ .valid-feedback,
@@ -2348,7 +2340,7 @@ textarea.form-control {
   border-color: #28a745;
   box-shadow: 0 0 0 0.2rem rgba(40, 167, 69, 0.25);
 }
-*/
+
 
 .invalid-feedback {
   display: none;
@@ -2373,7 +2365,7 @@ textarea.form-control {
   background-color: rgba(220, 53, 69, 0.9);
   border-radius: 0.25rem;
 }
-/*
+
 .was-validated :invalid ~ .invalid-feedback,
 .was-validated :invalid ~ .invalid-tooltip,
 .is-invalid ~ .invalid-feedback,
@@ -2442,9 +2434,7 @@ textarea.form-control {
   border-color: #dc3545;
   box-shadow: 0 0 0 0.2rem rgba(220, 53, 69, 0.25);
 }
-*/
 
-/*
 .form-inline {
   display: flex;
   flex-flow: row wrap;
@@ -2694,7 +2684,7 @@ fieldset:disabled a.btn {
 .btn-warning:not(:disabled):not(.disabled):active:focus, .btn-warning:not(:disabled):not(.disabled).active:focus, .show > .btn-warning.dropdown-toggle:focus {
   box-shadow: 0 0 0 0.2rem rgba(254, 216, 84, 0.5);
 }
-/*
+
 .btn-danger {
   color: #fff;
   background-color: #dc3545;
@@ -2723,8 +2713,7 @@ fieldset:disabled a.btn {
 }
 .btn-danger:not(:disabled):not(.disabled):active:focus, .btn-danger:not(:disabled):not(.disabled).active:focus, .show > .btn-danger.dropdown-toggle:focus {
   box-shadow: 0 0 0 0.2rem rgba(225, 83, 97, 0.5);
-}*/
-
+}
 .btn-light {
   color: #212529;
   background-color: #f8f9fa;
