--- a/css/styles.css
+++ b/css/styles.css
@@ -10593,7 +10593,7 @@ section#contact form#contactForm :-ms-input-placeholder {
   font-family: "Montserrat", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
 }
 
-<!--LO QUE AGREGUE YO->
+/*LO QUE AGREGUE YO*/
 .intro {
   position: relative;
 }
