--- a/css/styles.css
+++ b/css/styles.css
@@ -10331,7 +10331,7 @@ header.masthead {
   padding-bottom: 6rem;
   text-align: center;
   color: #fff;
-  background-image: url("../assets/img/header-bg.png");
+  background-image: url("../assets/img/header-bg.PNG");
   background-repeat: no-repeat;
   background-attachment: scroll;
   background-position: center center;
